# sparseconverter

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: advanced.py  usage.py
scripts/: benchmark.ipynb
src/sparseconverter/: __init__.py
tests/: test_sparseconverters.py
