[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sparseconverter"
description = "Converter matrix and type determination for a range of array formats, focusing on sparse arrays"
license = {file = "LICENSE"}
keywords = ["numpy", "scipy.sparse", "sparse", "array", "matrix", "cupy", "cupyx.scipy.sparse"]
requires-python = ">=3.7"
dynamic = ["version", "readme"]
dependencies = [
    "numpy",
    "scipy",
    "sparse",
    "typing-extensions",
]

[project.optional-dependencies]
cupy = ["cupy"]
test = ["pytest"]

[tool.setuptools.dynamic]
version = {attr = "sparseconverter.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}
