[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sparseconverter"
description = "Converter matrix and type determination for a range of array formats, focusing on sparse arrays"
license = {file = "LICENSE"}
keywords = ["numpy", "scipy.sparse", "sparse", "array", "matrix", "cupy", "cupyx.scipy.sparse"]
requires-python = ">=3.9"
dynamic = ["version", "readme"]
dependencies = [
    "numpy",
    "scipy>=1.8",
    "sparse>=0.12",
    "typing-extensions",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
]
authors = [
    {name="Dieter Weber", email="d.weber@fz-juelich.de"},
]

[project.urls]
repository = "https://github.com/LiberTEM/sparseconverter"

[project.optional-dependencies]
cupy = ["cupy"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.dynamic]
version = {attr = "sparseconverter.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}
